<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    style="@style/table_textview"
                    android:text="@string/reset_password"
                    android:textSize="@dimen/m2"
                    android:textStyle="bold"
                    android:typeface="serif"/>

                <!--  -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/table_textview"
                        android:text="@string/email"/>

                    <EditText
                        android:id="@+id/edittext_reset_email"
                        style="@style/table_edittext"
                        android:inputType="textEmailAddress"/>
                </LinearLayout>

                <!--  -->

                <LinearLayout
                    android:id="@+id/layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        style="@style/table_textview"
                        android:text="@string/password"/>

                    <EditText
                        android:id="@+id/edittext_reset_password"
                        style="@style/table_edittext"
                        android:inputType="textPassword"/>
                </LinearLayout>

                <!--  -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/button_reset_password"
                        style="@style/button"
                        android:layout_marginRight="5dp"
                        android:text="@string/reset"/>

                    <Button
                        android:id="@+id/button_reset_cancel"
                        style="@style/button"
                        android:layout_marginLeft="5dp"
                        android:text="@string/cancel"/>
                </LinearLayout>


            </LinearLayout>
            
        </ScrollView>
    </LinearLayout>

</LinearLayout>